--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -47,7 +47,7 @@
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
-            <button class="ui mini primary button" (click)="addData()">
+            <button class="ui mini green button" (click)="addData()">
               <i class="add icon"></i>
               เพิ่มข้อมูลติดตาม
             </button>
@@ -74,7 +74,12 @@
             <th colspan="1" style="text-align: center !important;">วันครบกำหนดครั้งที่ 2</th>
             <th colspan="2" style="text-align: center !important;">หน่วยรับตรวจแจ้งผลการดำเนินงานครั้งที่ 2</th>
             <th colspan="2" style="text-align: center !important;">รายงานการติดตามครั้งที่ 2</th>
+            <th colspan="2" style="text-align: center !important;">แจ้งติดตามหน่วยรับตรวจครั้งที่ 3</th>
+            <th colspan="1" style="text-align: center !important;">วันครบกำหนดครั้งที่ 3</th>
+            <th colspan="2" style="text-align: center !important;">หน่วยรับตรวจแจ้งผลการดำเนินงานครั้งที่ 3</th>
+            <th colspan="2" style="text-align: center !important;">รายงานการติดตามครั้งที่ 3</th>
             <th rowspan="2" style="text-align: center !important;">สถานะการติดตาม</th>
+            <th rowspan="2" style="text-align: center !important;">หมายเหตุ</th>
             <th rowspan="2" style="text-align: center !important;">จัดการ</th>
           </tr>
           <tr>
@@ -83,6 +88,13 @@
             <th style="text-align: center !important;">เลขหนังสือ</th>
             <th style="text-align: center !important;">วันที่</th>
             <th style="text-align: center !important;">45 วัน</th>
+            <th style="text-align: center !important;">60 วัน</th>
+            <th style="text-align: center !important;">เลขหนังสือ</th>
+            <th style="text-align: center !important;">วันที่</th>
+            <th style="text-align: center !important;">เลขหนังสือ</th>
+            <th style="text-align: center !important;">วันที่</th>
+            <th style="text-align: center !important;">เลขหนังสือ</th>
+            <th style="text-align: center !important;">วันที่</th>
             <th style="text-align: center !important;">60 วัน</th>
             <th style="text-align: center !important;">เลขหนังสือ</th>
             <th style="text-align: center !important;">วันที่</th>
