add fontEn and edit

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-1/int01-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-1/int01-3-1.component.html
@@ -2,10 +2,9 @@
   <div class="sixteen wide column">
     <h2 class="ui header">ตรวจสอบใบอนุญาตสุรา ยาสูบ ไพ่</h2>
 
-    <div class="ui top attached header">
-      <span> ตรวจสอบใบอนุญาตสุรา ยาสูบ ไพ่</span>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span> ตรวจสอบใบอนุญาตสุรา ยาสูบ ไพ่</span>
     </div>
-
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
