--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-8/int01-8-1/int01-8-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-8/int01-8-1/int01-8-1.component.html
@@ -1,275 +1,193 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ค้นหากระดาษทำการ</h2>
 
-    <div class="ui top attached header">
-      <span>ค้นหากระดาษทำการ </span>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>ค้นหาข้อมูลการนำส่งเงินเกิน 3 ครั้ง</span>
     </div>
-
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">เลขที่กระดาษทำการ</label>
-            <input type="text" placeholder="" value="">
+          <div class="two wide field"></div>
+          <div class="two wide field">
+            <label>สรรพสามิตภาค</label>
           </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">หน่วยรับตรวจ</label>
-            <select name="selectArea" id="selectArea" class="ui dropdown ai">
-              <option *ngFor="let item of areaList; index as i;" value="{{i+1}}">{{item.value}}</option>
+          <div class="four wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+            </select>
+          </div>
+          <div class="two wide field">
+            <label>สรรพสามิตพื้นที่</label>
+          </div>
+          <div class="four wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
         </div>
-
         <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ประเภทกระดาษทำการ</label>
-            <select name="selectSubArea" id="selectSubArea" class="ui dropdown ai">
-              <option *ngFor="let item of subAreaList; index as i;" value="{{i+1}}">{{item.value}}</option>
+          <div class="two wide field"></div>
+          <div class="two wide field">
+            <label>สรรพสามิตสาขา</label>
+          </div>
+          <div class="four wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ผู้ตรวจ</label>
-            <input type="text" placeholder="" value="">
+          <div class="two wide field ">
+            <label>วันที่
+            </label>
           </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="nine wide field">
-            <label class="custom-label-w-20" style="margin-right: 5%;">วันที่</label>
-            <div class="seven wide field">
-              <div class="ui icon input">
-                <input type="text" placeholder="MM/YYYY" value="09/2560">
-                <i class="add to calendar icon"></i>
+          <div class="two wide field">
+            <div class="ui calendar" id="calendar1" style="width:100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="endDate" id="endDate">
               </div>
             </div>
-            <div class="eight wide field">
-              <label>ถึง</label>
-              <div class="ui icon input">
-                <input type="text" placeholder="MM/YYYY" value="10/2560">
-                <i class="add to calendar icon"></i>
+          </div>
+          <label>ถึง</label>
+          <div class="two wide field">
+            <div class="ui calendar" id="calendar2" style="width:100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="endDate" id="endDate">
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="ui center aligned grid">
-        <div class="eight wide column">
-          <button class="ui mini primary button width-100">
-            <i class="search icon"></i>
-            ค้นหา
-          </button>
-          <button class="ui mini button width-100">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
+        <br>
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <button class="ui mini primary button width-100" (click)="showData()">
+              <i class="search icon"></i>
+              ค้นหา
+            </button>
+            <button class="ui mini  button width-100" (click)="hideData()">
+              <i class="trash alternate icon"></i>
+              ล้างข้อมูล
+            </button>
+          </div>
         </div>
+
       </div>
+
     </div>
-
-    <div class="ui segment">
-      <table id="table1" class="ui small celled table">
-        <thead>
-          <tr style="text-align: center;">
-            <th>ลำดับที่</th>
-            <th>เลขที่กระดาษทำการ</th>
-            <th>ประเภทกระดาษทำการ</th>
-            <th>วันที่</th>
-            <th colspan="4">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>R2560100001</td>
-            <td>กระดาษทำการภาษีสรรพสามิต</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>R2560100002</td>
-            <td>กระดาษทำการภาษีสรรพสามิต</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>R2560100003</td>
-            <td>กระดาษทำการภาษีสรรพสามิต</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>R2560100004</td>
-            <td>กระดาษทำการภาษีสรรพสามิต</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>R2560100005</td>
-            <td>กระดาษทำการใบอนุญาตสุรา ยาสูบ ไพ่</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>R2560100006</td>
-            <td>กระดาษทำการใบอนุญาตสุรา ยาสูบ ไพ่</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>R2560100007</td>
-            <td>กระดาษทำการใบอนุญาตสุรา ยาสูบ ไพ่</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>R2560100008</td>
-            <td>กระดาษทำการใบอนุญาตสุรา ยาสูบ ไพ่</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>R2560100009</td>
-            <td>กระดาษทำการค่าปรับเปรียบเทียบคดี</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-          <tr>
-            <td>10</td>
-            <td>R2560100010</td>
-            <td>กระดาษทำการค่าปรับเปรียบเทียบคดี</td>
-            <td>17 พฤษจิกายน 2560</td>
-            <td>
-              <a>พิมพ์</a>
-            </td>
-            <td>
-              <a>ส่งออก</a>
-            </td>
-            <td>
-              <a>แก้ไข</a>
-            </td>
-            <td>
-              <a>ลบ</a>
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
-    </div>
-
   </div>
+</div>
+
+
+<div class="ui attached segment" id="Int0181">
+  <table class="ui  small celled table">
+    <thead>
+      <tr style="text-align: center;">
+        <th>ลำดับที่</th>
+        <th>วัน/เดือน/ปี ที่จัดเก็บรายได้</th>
+        <th>จำนวนเงินที่จัดเก็บ</th>
+        <th>วัน/เดือน/ปี ที่นำเงินฝากบัญชีพัก</th>
+        <th>วัน/เดือนปี ที่นำเงินฝากคลัง</th>
+        <th>จำนวนเงินที่ฝากคลัง</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>02/10/2560</td>
+        <td> 4,887.00 </td>      
+        <td>02/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>02/10/2560</td>
+        <td> 97.74 </td>  
+        <td>02/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>02/10/2560</td>
+        <td> 72.20 </td>      
+        <td>02/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>02/10/2560</td>
+        <td> 97.74 </td>       
+        <td>02/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>03/10/2560</td>
+        <td> 210.00 </td>   
+        <td>03/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>06/10/2560</td>
+        <td> 168.00 </td>       
+        <td>06/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>06/10/2560</td>
+        <td> 960.00 </td>   
+        <td>06/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>07/10/2560</td>
+        <td> 28,448.88 </td>      
+        <td>07/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>08/10/2560</td>
+        <td> 96.00 </td>        
+        <td>08/10/2560</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>09/10/2560</td>
+        <td> 270.00 </td>      
+        <td>09/10/2560</td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+
+
+  <div class="ui center aligned grid">
+    <div class="eight wide column">
+      <button class="ui mini primary button width-100">
+        <i class="save  icon"></i>
+        บันทึก
+      </button>
+      <button class="ui mini primary button width-100" [routerLink]="[ '/int07/2'] ">
+        <i class="clipboard check icon"></i>
+        ตรวจสอบ
+      </button>
+    </div>
+  </div>
+
 </div>
