--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2-1/int06-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2-1/int06-2-1.component.html
@@ -1,113 +1,6 @@
-<div class="ui grid">
-  <div class="sixteen wide column">
 
-    <h2 class="ui header">เปรียบเทียบรายงานสรุปรายการขอเบิก</h2>
 
-    <div class="ui top attached header">
-      <span>เปรียบเทียบรายงานสรุปรายการขอเบิก</span>
-    </div>
-
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">รหัสงบประมาณ</label>
-            <input type="text" value="3006">
-          </div>
-          <div class="eight wide field">
-            <select name="states" class="ui selection dropdown" multiple="" id="multi-select1">
-              <option value="">เลือก TR</option>
-              <option value="AL">TR-รับงบบุคลากร</option>
-              <option value="AK">TR-รับงบดำเนินงาน</option>
-              <option value="AZ">TR-รับงบกลาง</option>
-              <option value="AR">TR-สรก.รับเงินนอก</option>
-              <option value="CA">TR-ปรับเงินฝากคลัง</option>
-              <option value="CO">TR-ภายในกรมเดียวกัน</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">รหัสงบประมาณ</label>
-            <input type="text" value="90909080170973">
-          </div>
-          <div class="eight wide field">
-            <select name="states" class="ui selection dropdown" multiple="" id="multi-select2">
-              <option value="">เลือก TR</option>
-              <option value="AL">TR-รับงบบุคลากร</option>
-              <option value="AK">TR-รับงบดำเนินงาน</option>
-              <option value="AZ">TR-รับงบกลาง</option>
-              <option value="AR">TR-สรก.รับเงินนอก</option>
-              <option value="CA">TR-ปรับเงินฝากคลัง</option>
-              <option value="CO">TR-ภายในกรมเดียวกัน</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">รหัสงบประมาณ</label>
-            <input type="text" value="300613001000000">
-          </div>
-          <div class="eight wide field">
-            <select name="states" class="ui selection dropdown" multiple="" id="multi-select3">
-              <option value="">เลือก TR</option>
-              <option value="AL">TR-รับงบบุคลากร</option>
-              <option value="AK">TR-รับงบดำเนินงาน</option>
-              <option value="AZ">TR-รับงบกลาง</option>
-              <option value="AR">TR-สรก.รับเงินนอก</option>
-              <option value="CA">TR-ปรับเงินฝากคลัง</option>
-              <option value="CO">TR-ภายในกรมเดียวกัน</option>
-            </select>
-          </div>
-        </div>
-      </div>
-
-      <div class="ui center aligned grid">
-        <div class="four wide column">
-          <button class="ui mini primary button" (click)="compareData()">
-            <i class="exchange icon"></i>
-            เปรียบเทียบ
-          </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="refresh outline icon"></i>
-            ล้างข้อมูล
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="ui segment" *ngIf="showData">
-      <div class="ui right aligned grid">
-        <div class="sixteen wide column">
-          <button class="ui mini primary button">
-            <i class="save icon"></i>
-            บันทึก
-          </button>
-          <div id="export" class="ui primary buttons">
-            <div class="ui mini button">ส่งออก</div>
-            <div class="ui floating dropdown icon button">
-              <i class="dropdown icon"></i>
-              <div class="menu">
-                <div class="item">
-                  <i class="file pdf outline icon"></i> PDF</div>
-                <div class="item">
-                  <i class="file excel outline icon"></i>Excel</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br>
-      <div class="ui grid center aligned">
-        <div class="sixteen wide column">
-          ตารางแสดงผลการเปรียบเทียบสรุปรายการขอเบิกกับงบทดลอง
-        </div>
-      </div>
-      <br>
-
-      <table id="compareData" class="ui small celled table">
+      <table  class="ui small celled table">
         <thead>
           <tr style="text-align: center;">
             <th>รหัสงบประมาน</th>
@@ -161,6 +54,4 @@
           </button>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+   
