--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -54,7 +54,7 @@
                         routerLinkActive="active " style=" color:White ">ตรวจสอบใบอนุญาต</a>
                     <a class="item " [routerLink]="[ '/int01/3/1'] " *ngIf="authService.renderByPage('int01/3/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบใบเสร็จค่าปรับเปรียบเทียบคดี</a>
-                    <a class="item " [routerLink]="[ '/???'] " *ngIf="authService.renderByPage('???')" routerLinkActive="active "
+                    <a class="item " [routerLink]="[ '/int01/8/1'] " *ngIf="authService.renderByPage('/int01/8/1')" routerLinkActive="active "
                         style=" color:White ">ตรวจสอบการนำฝาก/ส่งเงินรายได้</a>
                     <a class="item " [routerLink]="[ '/int01/4/1'] " *ngIf="authService.renderByPage('int01/4/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบงบสรุปยอดเงินค่าภาษีกับงบทดลอง</a>
@@ -64,8 +64,9 @@
                         routerLinkActive="active " style=" color:White ">ตรวจสอบสถติการต่ออายุใบอนุญาตของผู้ประกอบการ</a>
                     <a class="item " [routerLink]="[ '/int01/7/1'] " *ngIf="authService.renderByPage('int01/7/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
-                    <a class="item " [routerLink]="[ '/???'] " *ngIf="authService.renderByPage('???')" routerLinkActive="active "
+                    <a class="item " [routerLink]="[ '/int01/9/1'] " *ngIf="authService.renderByPage('int01/9/1')" routerLinkActive="active "
                         style=" color:White ">รายงานตัดปีงบประมาณเงินผลประโยชน์ </a>
+                        
                 </div>
             </div>
             <div class="ui simple dropdown item " *ngIf="authService.renderByPage('int05')">
@@ -105,12 +106,12 @@
                 <i class="dropdown icon "></i> ตรวจสอบบัญชี
                 <div class="menu ">
 
-                    <a class="item " [routerLink]="[ '/int07/3'] " *ngIf="authService.renderByPage('int07/3')"
+                    <a class="item " [routerLink]="[ '/int07/1'] " *ngIf="authService.renderByPage('int07/1')"
                         routerLinkActive="active ">ตรวจสอบข้อมูลบัญชี
                     </a>
-                    <a class="item " [routerLink]="[ '/int07/4'] " *ngIf="authService.renderByPage('int07/4')"
+                    <a class="item " [routerLink]="[ '/int07/3'] " *ngIf="authService.renderByPage('int07/3')"
                         routerLinkActive="active ">ตรวจสอบงบทดลองกระทบยอด เดบิต เครดิต บัญชีแยกประเภท</a>
-                    <a class="item " [routerLink]="[ '/int07/5'] " *ngIf="authService.renderByPage('int07/5')"
+                    <a class="item " [routerLink]="[ '/int07/7'] " *ngIf="authService.renderByPage('int07/7')"
                         routerLinkActive="active ">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง
                     </a>
                     <a class="item " [routerLink]="[ '/int07/6'] " *ngIf="authService.renderByPage('int07/6')"
