--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.css
@@ -1,4 +1,8 @@
-th td:nth-child(1), td:nth-child(3), td:nth-child(4),
-td:nth-child(5), td:nth-child(6) {
+td:nth-child(3), td:nth-child(4),
+td:nth-child(5), td:nth-child(6), td:nth-child(1)  {
     text-align: right;
+}
+
+td:nth-child(7){
+    text-align: center;
 }
