--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2-1/int06-2-1.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2-1/int06-2-1.component.css
@@ -1,3 +1,3 @@
-tr td:nth-child(1), td:nth-child(3), td:nth-child(5), td:nth-child(6) {
+tr td:nth-child(5), td:nth-child(6) {
     text-align: right;
 }
